@@ -4,17 +4,16 @@ import java.math.BigDecimal;
 import java.util.List;
 
 import static java.lang.Integer.compare;
-import static java.util.stream.Collectors.toList;
 
 public record SeriesRankingData(String name, int numberOfCompetitions, List<Category> categories) {
 
-    public  record Category(String abbreviation, String name, int yearFrom, int yearTo, List<Athlete> athletes) {
+    public record Category(String abbreviation, String name, int yearFrom, int yearTo, List<Athlete> athletes) {
 
         public List<Athlete> getFilteredAndSortedAthletes(int numberOfCompetitions) {
             return athletes.stream()
                 .filter(athlete -> athlete.results != null && athlete.results().size() == numberOfCompetitions)
                 .sorted((o1, o2) -> compare(o2.totalPoints(), o1.totalPoints()))
-                .collect(toList());
+                .toList();
         }
 
         public record Athlete(String firstName, String lastName, int yearOfBirth, String club, List<Result> results) {
