@@ -9,8 +9,6 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 import static ch.jtaf.db.tables.SecurityUser.SECURITY_USER;
 import static ch.jtaf.db.tables.UserGroup.USER_GROUP;
 
@@ -40,7 +38,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
             return new User(securityUserRecord.getEmail(), securityUserRecord.getSecret(),
                 groups.stream()
                     .map(group -> new SimpleGrantedAuthority("ROLE_" + group))
-                    .collect(Collectors.toList()));
+                    .toList());
         } else {
             throw new UsernameNotFoundException(username);
         }
